# WeatherApi

./: .env.example  .gitignore  Dockerfile  README.md  app.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/adapters/: http_client.py  redis_cache.py  sqlite_repo.py  storage.py
app/api/: routes.py
app/core/: config.py  deps.py  errors.py  logging.py
app/models/: schemas.py
app/services/: weather_service.py
data/: london_20260218T124022Z.json  paris_20260218T170930Z.json  tbilisi_20260218T123931Z.json  tbilisi_20260218T124654Z.json  tbilisi_20260218T125706Z.json  tbilisi_20260218T170957Z.json
tests/: test_weather_service_unit.py
